--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "prettier": "@shopify/prettier-config",
   "dependencies": {
-    "@shopify/hydrogen": "2025.7.0",
+    "@headlessui/react": "^2.2.9",
+    "@shopify/hydrogen": "^2025.7.0",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
     "isbot": "^5.1.22",
@@ -22,6 +23,7 @@
     "react-dom": "18.3.1",
     "react-router": "7.9.2",
     "react-router-dom": "7.9.2",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
