--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
   },
   "prettier": "@shopify/prettier-config",
   "dependencies": {
+    "@remix-run/react": "^2.17.2",
+    "@shopify/admin-api-client": "^1.1.1",
     "@shopify/hydrogen": "2025.7.0",
+    "@shopify/remix-oxygen": "^3.0.1",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
     "isbot": "^5.1.22",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router": "7.9.2",
-    "react-router-dom": "7.9.2",
+    "react-router-dom": "^7.9.6",
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
